@@ -24,7 +24,6 @@
 #include <string.h>
 #include <stdint.h>
 #include <dirent.h>
-#include <err.h>
 #include "read-file.h"
 #include "libpoke.h"
 
@@ -99,8 +98,11 @@ test_simple_values (pk_compiler pkc)
   {
     char *bigstr;
 
-    if ((bigstr = (char *)malloc (bigstr_len + 1)) == NULL)
-      err (1, "malloc () failed");
+    if ((bigstr = (char *) malloc (bigstr_len + 1)) == NULL)
+      {
+        fprintf (stderr, "malloc () failed\n");
+        exit (1);
+      }
     memset (bigstr, 'P', bigstr_len);
     bigstr[bigstr_len] = '\0';
 
@@ -352,7 +354,10 @@ test_pk_val_equal_p ()
 
   directory = opendir (TESTDIR);
   if (!directory)
-    err (1, "opendir (%s) failed", TESTDIR);
+    {
+      fprintf (stderr, "opendir (%s) failed", TESTDIR);
+      exit (1);
+    }
 
   while ((dir = readdir (directory)) != NULL)
     {
@@ -364,22 +369,37 @@ test_pk_val_equal_p ()
         continue;
 
       if (asprintf (&testfile, "%s/%s", TESTDIR, dir->d_name) == -1)
-        err (1, "asprintf () failed");
+        {
+          fprintf (stderr, "asprintf () failed\n");
+          exit (1);
+        }
 
       if ((sec_code = read_file (testfile, 0, &test_len)) == NULL)
-        err (1, "read_file (%s) failed", testfile);
+        {
+          fprintf (stderr, "read_file (%s) failed\n", testfile);
+          exit (1);
+        }
 
       if ((sec_expr1 = strstr (sec_code, "##\n")) == NULL)
-        errx (1, "Invalid test file");
+        {
+          fprintf (stderr, "Invalid test file\n");
+          exit (1);
+        }
       sec_expr1[0] = '\0'; /* end of code section */
       sec_expr1 += 3;      /* start of first expression section */
       if ((sec_expr2 = strstr (sec_expr1, "##\n")) == NULL)
-        errx (1, "Invalid test file");
+        {
+          fprintf (stderr, "Invalid test file\n");
+          exit (1);
+        }
       sec_expr2[0] = '\0'; /* end of first expression section */
       sec_expr2 += 3;      /* start of second expression section */
 
       if (sec_expr2 - sec_code > test_len)
-        errx (1, "Invalid test file");
+        {
+          fprintf (stderr, "Invalid test file\n");
+          exit (1);
+        }
 
       testcase_pk_val_equal_p (dir->d_name, sec_code, sec_expr1, sec_expr2);
 
